[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/assets/Icons/White/General/Pointers/Right100pxWhite.png" type="Texture" id=1]
[ext_resource path="res://src/assets/Icons/White/Tagging/cd_128px.png" type="Texture" id=2]
[ext_resource path="res://src/Scenes/General/CoverSwitcher/Cover.gd" type="Script" id=3]
[ext_resource path="res://src/assets/Icons/White/General/Pointers/Left100pxWhite.png" type="Texture" id=4]
[ext_resource path="res://src/Scenes/General/CoverSwitcher/CoverSwitcher.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;
uniform vec2 direction = vec2(0,1);
uniform float strength : hint_range(0.0,3.0) = 1.0;

void fragment(){
	vec4 pixelcolor = texture(TEXTURE, UV);
	COLOR = color;
	vec2 NewUV = ((UV / 2.0) + 0.2) * direction;
	
	COLOR.a *= (NewUV.x + NewUV.y) * strength;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/color = Color( 0.247059, 0.247059, 0.247059, 1 )
shader_param/direction = Vector2( 0, 1 )
shader_param/strength = 0.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="CoverSwitcher" type="MarginContainer"]
anchor_right = 0.134
anchor_bottom = 0.29
margin_right = -0.0800018
margin_bottom = -3.05176e-05
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 173.0
custom_constants/separation = 3

[node name="Cover" type="TextureRect" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Cover"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="SwitchButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 150.0
margin_bottom = 123.0
rect_min_size = Vector2( 0, 20 )
custom_constants/separation = 0

[node name="Prior" type="TextureButton" parent="VBoxContainer/SwitchButtons"]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 14 )
mouse_default_cursor_shape = 2
size_flags_vertical = 14
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Next" type="TextureButton" parent="VBoxContainer/SwitchButtons"]
margin_left = 40.0
margin_top = 6.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 14 )
mouse_default_cursor_shape = 2
size_flags_vertical = 12
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Counter" type="Label" parent="VBoxContainer/SwitchButtons"]
margin_left = 80.0
margin_top = 4.0
margin_right = 120.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 10
text = "X"
align = 2
valign = 1

[node name="Divisor" type="Label" parent="VBoxContainer/SwitchButtons"]
margin_left = 120.0
margin_top = 4.0
margin_right = 130.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 10
text = "/"
align = 1
valign = 1

[node name="Max" type="Label" parent="VBoxContainer/SwitchButtons"]
margin_left = 130.0
margin_top = 4.0
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 10
text = "X"
valign = 1

[connection signal="gui_input" from="VBoxContainer/Cover" to="." method="_on_Cover_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Cover" to="VBoxContainer/Cover" method="_on_Cover_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Cover" to="VBoxContainer/Cover" method="_on_Cover_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/SwitchButtons/Prior" to="." method="_on_Prior_pressed"]
[connection signal="pressed" from="VBoxContainer/SwitchButtons/Next" to="." method="_on_Next_pressed"]
